# OpenCV-CPP

./: .gitignore  CMakeLists.txt  main.cpp
