cmake_minimum_required(VERSION 3.5)
project(opencv)
add_executable(opencv main.cpp)

set(CMAKE_CXX_COMPILER clang++)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a")
add_definitions(-Wall -Wextra -O2)
find_package(OpenCV REQUIRED)
if(OpenCV_FOUND)
    target_include_directories(opencv PUBLIC ${OpenCV_INCLUDE_DIRS})
    target_link_libraries(opencv ${OpenCV_LIBS})
endif()